--- a/templates/users/login.html
+++ b/templates/users/login.html
@@ -6,16 +6,16 @@
             {%  csrf_token %}
             <fieldset class="form-group">
                 <legend class="border-bottom mb-4">
-                    Register Today
+                    Log In
                 </legend>
                 {{ form|crispy }}
             </fieldset>
             <div class="form-group mb-4">
-                <button class="btn btn-outline-info" type="submit">Sign Up</button>
+                <button class="btn btn-outline-info" type="submit">Login</button>
             </div>
         </form>
         <div class="border-top pt-3">
-            <small class="text-muted">Already Have an Account? <a class="ml-2" href="{% url 'login' %}">Sign In</a> </small>
+            <small class="text-muted">Do you need an Account? <a class="ml-2" href="{% url 'register' %}">Sign Up</a> </small>
         </div>
     </div>
 {%  endblock content %}
