--- a/templates/framework/home2.html
+++ b/templates/framework/home2.html
@@ -7,7 +7,7 @@
       <hr class="my-4">
       <p>Below you will find links to download the framework Guidelines and examine resources</p>
       <p class="lead">
-          <a class="btn btn-primary btn-lg" href="#" role="button">Guidelines</a>
+          <a class="btn btn-primary btn-lg" href="{% url "blog-home" %}" role="button">Resources</a>
           <a class="btn btn-primary btn-lg" href="#" role="button">Download PDF</a>
       </p>
     </div>
