--- a/templates/blog/base.html
+++ b/templates/blog/base.html
@@ -40,7 +40,7 @@
                       <a class="dropdown-item" href="#">Mental Health</a>
                     </div>
                 </li>
-                <a class="nav-item nav-link" href="{% url 'blog-home' %}">Resources</a>
+                <a class="nav-item nav-link" href="{% url 'resource-home' %}">Resources</a>
                 <a class="nav-item nav-link" href="{% url 'blog-about' %}">About</a>
             </div>
             <!-- Navbar Right Side -->
