--- a/templates/resources/home.html
+++ b/templates/resources/home.html
@@ -1,16 +1,45 @@
 {%  extends 'blog/base.html' %}
 {% block content %}
-    {% for post in posts %}
-        <article class="media content-section">
-          <div class="media-body">
-            <div class="article-metadata">
-              <a class="mr-2" href="#">{{ post.author }}</a>
-              <small class="text-muted">{{ post.date_posted|date:'F d, Y' }}</small>
+    <div class="row">
+    <div class="col-md-8">
+    <nav aria-label="breadcrumb">
+          <ol class="breadcrumb">
+            <li class="breadcrumb-item"><a href="{% url "framework-home" %}">Home</a></li>
+            <li class="breadcrumb-item active" aria-current="page">Resources</li>
+          </ol>
+    </nav>
+    {% for resource in resources %}
+            <div class="card mb-3" >
+                <h5 class="card-header">{{ resource.title }}</h5>
+                <div class="card-body">
+                    <p>{{ resource.content }}</p>
+                    <button class="btn btn-outline-primary">{{ resource.framework_category }}</button>
+                    <a class="btn btn-primary" href="{{ resource.site_url }}" role="button">View Site</a>
+                    <a class="btn btn-primary" href="{{ resource.site_url }}" role="button">View Details</a>
+                </div>
+
+                <div class="card-footer text-muted">
+                    User: <a class="mr-2" href="#">{{ resource.author }}</a> Date Posted: {{ resource.date_posted|date:'F d, Y' }}
+                </div>
             </div>
-            <h2><a class="article-title" href="{% url 'post-detail' post.id %}">{{ post.title }}</a></h2>
-            <p class="article-content">{{ post.content }}</p>
-          </div>
-        </article>
     {% endfor %}
+    </div>
+        <!--This is the right side panel-->
+    <div class="col-md-4">
+        <div class="mt-1 mb-4">
+            <button class="btn btn-primary col-md-12">Add Resource</button>
+        </div>
+        <div class="jumbotron">
+          <h1 class="display-4">Resources</h1>
+          <p class="lead">When designing a course or lesson for Blended Learning. These are some important guidelines that you should follow along with trhings to avoid when designing your course</p>
+            <p><a href="#newcourse" class="card-link">Course Design</a></p>
+            <p><a href="#existingcourse" class="card-link">Assessment</a></p>
+            <p><a href="#mentalhealth" class="card-link">Activities</a></p>
+            <p><a href="#avoid" class="card-link">Technology and Tools</a></p>
+            <p><a href="#avoid" class="card-link">Professional Development</a></p>
+
+        </div>
+    </div>
+    </div>
 {%  endblock content %}
 
