--- a/templates/blog/post_detail.html
+++ b/templates/blog/post_detail.html
@@ -10,4 +10,15 @@
         <p class="article-content">{{ object.content }}</p>
       </div>
     </article>
+    <a class="btn btn-default" href="{% url 'add_comment_to_post' pk=post.pk %}">Add comment</a>
+    <hr>
+    {% for comment in post.comments.all %}
+        <div class="comment">
+            <div class="date">{{ comment.created_date }}</div>
+            <strong>{{ comment.author }}</strong>
+            <p>{{ comment.text|linebreaks }}</p>
+        </div>
+    {% empty %}
+        <p>No comments here yet :(</p>
+    {% endfor %}
 {%  endblock content %}
