Final Milestone version to setup up on python anywhere.

--- a/templates/blog/base.html
+++ b/templates/blog/base.html
@@ -36,12 +36,10 @@
                         <a class="dropdown-item" href="{% url 'framework-activities' %}">Activities</a>
                         <a class="dropdown-item" href="{% url 'framework-technology' %}">Technology and Tools</a>
                         <a class="dropdown-item" href="{% url 'framework-professional' %}">Professional Development</a>
-                      <div class="dropdown-divider"></div>
-                      <a class="dropdown-item" href="#">Mental Health</a>
                     </div>
                 </li>
                 <a class="nav-item nav-link" href="{% url 'resource-home' %}">Resources</a>
-                <a class="nav-item nav-link" href="{% url 'blog-about' %}">About</a>
+                <a class="nav-item nav-link" href="#">Lessons</a>
             </div>
             <!-- Navbar Right Side -->
             <div class="navbar-nav">
