Final for Milestone 2

--- a/templates/framework/activities.html
+++ b/templates/framework/activities.html
@@ -186,6 +186,9 @@
             <a type="button" href="https://www.khanacademy.org/" class="list-group-item list-group-item-action">Khan Academy</a>
             <a type="button" href="https://new.edmodo.com/" class="list-group-item list-group-item-action">Edmodo</a>
             <a type="button" href="https://edpuzzle.com/" class="list-group-item list-group-item-action">Edpuzzle</a>
+            <div class="card-footer text-muted text-center">
+                <a href="{% url 'resource-activities' %}">Additional Resources</a>
+            </div>
         </div>
         <div class="list-group mb-3">
           <button type="button" class="list-group-item list-group-item-action active">
