--- a/templates/framework/assessment.html
+++ b/templates/framework/assessment.html
@@ -89,6 +89,9 @@
             <a type="button" href="https://workspace.google.com/products/sites/" class="list-group-item list-group-item-action">Google Sites (Summative Assessment)</a>
             <a type="button" href="https://www.canva.com" class="list-group-item list-group-item-action">Canva (Summative Assessment)</a>
             <a type="button" href="https://studio.youtube.com/" class="list-group-item list-group-item-action">YouTube Studio (Summative Assessment)</a>
+            <div class="card-footer text-muted text-center">
+                <a href="{% url 'resource-assessment' %}">Additional Resources</a>
+            </div>
         </div>
         <div class="list-group mb-3">
           <button type="button" class="list-group-item list-group-item-action active">
