--- a/templates/framework/technology.html
+++ b/templates/framework/technology.html
@@ -62,7 +62,7 @@
     <div class="col-md-4">
         <div class="jumbotron">
           <h1 class="display-4">Technology and Tools</h1>
-          <p class="lead">When designing a course or lesson for Blended Learning. These are some important guidelines that you should follow along with trhings to avoid when designing your course</p>
+          <p class="lead">Before developing a Blended learning environment. It is important that the following guidelines are followed along with evaluating different LMS systems for your environment</p>
             <p><a href="#technology" class="card-link">Technology Guidelines</a></p>
             <p><a href="#lms" class="card-link">Selecting the Right LMS</a></p>
 
@@ -72,11 +72,14 @@
           <button type="button" class="list-group-item list-group-item-action active">
             Resource Links
           </button>
-            <a type="button" href="https://www.youtube.com" class="list-group-item list-group-item-action">YouTube</a>
-            <a type="button" href="https://www.flipgrid.com" class="list-group-item list-group-item-action">Flipgrid</a>
-            <a type="button" href="https://www.youtube.com/c/smartereveryday/featured" class="list-group-item list-group-item-action">Smarter Everyday</a>
-            <a type="button" href="https://www.youtube.com/channel/UCtFRv9O2AHqOZjjynzrv-xg" class="list-group-item list-group-item-action">YouTube Learning</a>
-            <a type="button" href="https://www.khanacademy.org" class="list-group-item list-group-item-action">Khan Academy</a>
+            <a type="button" href="https://moodle.org/" class="list-group-item list-group-item-action">Moodle</a>
+            <a type="button" href="https://www.blackboard.com/" class="list-group-item list-group-item-action">Blackboard</a>
+            <a type="button" href="https://www.schoology.com/" class="list-group-item list-group-item-action">Schoology</a>
+            <a type="button" href="https://edu.google.com/products/classroom/" class="list-group-item list-group-item-action">Google Classroom</a>
+            <a type="button" href="https://www.instructure.com/canvas" class="list-group-item list-group-item-action">Canvas by Instructure</a>
+            <div class="card-footer text-muted text-center">
+                <a href="{% url 'resource-technology' %}">Additional Resources</a>
+            </div>
         </div>
         <div class="list-group mb-3">
           <button type="button" class="list-group-item list-group-item-action active">
