--- a/templates/framework/course-design.html
+++ b/templates/framework/course-design.html
@@ -1,4 +1,5 @@
 {%  extends 'blog/base.html' %}
+{% load static %}
 {% block content %}
     <div class="row">
     <div class="col-md-8">
@@ -12,7 +13,7 @@
             <div class="card-body">
                 <h2 class="card-title">New Course - Guidelines</h2>
                 <hr class="my-3">
-                <a class="btn btn-primary btn-lg" href="#" role="button">Lesson Template</a>
+                <a class="btn btn-primary btn-lg" href="{% static 'blog/LessonTemplate.pdf' %}" role="button">Lesson Template</a>
             </div>
         </div>
         <div class="card mb-3" >
@@ -65,7 +66,7 @@
             <div class="card-body">
                 <h2 class="card-title">Existing Course - Guidelines</h2>
                 <hr class="my-3">
-                <a class="btn btn-primary btn-lg" href="#" role="button">Lesson Template</a>
+                <a class="btn btn-primary btn-lg" href="{% static 'blog/LessonTemplate.pdf' %}" role="button">Lesson Template</a>
             </div>
         </div>
         <div class="card mb-3" >
@@ -142,7 +143,7 @@
             <div class="card-body bg-danger">
                 <h2 class="card-title text-white">Mental Health - Guidelines</h2>
                 <hr class="my-3">
-                <a class="btn btn-primary btn-lg" href="#" role="button">Mental Health Lesson Template</a>
+                <a class="btn btn-primary btn-lg" href="{% static 'blog/MentalHealthTemplate.pdf' %}" role="button">Mental Health Lesson Template</a>
             </div>
         </div>
         <div class="card mb-3" >
@@ -251,6 +252,9 @@
             <a type="button" href="https://www.youtube.com/c/smartereveryday/featured" class="list-group-item list-group-item-action">Smarter Everyday</a>
             <a type="button" href="https://www.youtube.com/channel/UCtFRv9O2AHqOZjjynzrv-xg" class="list-group-item list-group-item-action">YouTube Learning</a>
             <a type="button" href="https://www.khanacademy.org" class="list-group-item list-group-item-action">Khan Academy</a>
+            <div class="card-footer text-muted text-center">
+                <a href="{% url 'resource-course-design' %}">Additional Resources</a>
+            </div>
         </div>
         <div class="list-group mb-3">
           <button type="button" class="list-group-item list-group-item-action active">
