Final Project Submittal

--- a/templates/framework/course-design.html
+++ b/templates/framework/course-design.html
@@ -140,23 +140,23 @@
             </div>
         </div>
         <div class="card mb-3" id="mentalhealth" >
-            <div class="card-body bg-danger">
-                <h2 class="card-title text-white">Mental Health - Guidelines</h2>
+            <div class="card-body">
+                <h2 class="card-title">Mental Health - Guidelines</h2>
                 <hr class="my-3">
                 <a class="btn btn-primary btn-lg" href="{% static 'blog/MentalHealthTemplate.pdf' %}" role="button">Mental Health Lesson Template</a>
             </div>
         </div>
         <div class="card mb-3" >
-            <h5 class="card-header text-white bg-danger">Mental Health Guidelines</h5>
+            <h5 class="card-header">Mental Health Guidelines</h5>
 
-            <div class="card-body text-danger">
-                <h6 class="card-subtitle mb-2 text-danger">Mental Health</h6>
+            <div class="card-body">
+                <h6 class="card-subtitle mb-2 ">Mental Health</h6>
                 <ul class="list-group">
-                    <li class="list-group-item border-danger">Consider how your course impacts student wellbeing </li>
-                    <li class="list-group-item border-danger">Use diagnostics to help students self-assess to help the learner understand their level of preparedness.</li>
-                    <li class="list-group-item border-danger">Provide clear expectations for your students. Give clear deadlines and expectations for assessment.</li>
-                    <li class="list-group-item border-danger">Consider the tone of your syllabus and course. Stay away from phrases like “all students must” and “failure to follow these instructions” they come across as unwelcoming.</li>
-                    <li class="list-group-item border-danger">Instructor should not take on the role of a counsellor or try to diagnose the student. Refer your learner to the appropriate school resource.</li>
+                    <li class="list-group-item ">Consider how your course impacts student wellbeing </li>
+                    <li class="list-group-item">Use diagnostics to help students self-assess to help the learner understand their level of preparedness.</li>
+                    <li class="list-group-item">Provide clear expectations for your students. Give clear deadlines and expectations for assessment.</li>
+                    <li class="list-group-item">Consider the tone of your syllabus and course. Stay away from phrases like “all students must” and “failure to follow these instructions” they come across as unwelcoming.</li>
+                    <li class="list-group-item">Instructor should not take on the role of a counsellor or try to diagnose the student. Refer your learner to the appropriate school resource.</li>
                 </ul>
             </div>
         </div>
