--- a/templates/framework/home2.html
+++ b/templates/framework/home2.html
@@ -70,7 +70,7 @@
         </div>
         <div class="col-md-5" style="text-align: center;">
           <p><img class="rounded mx-auto d-block" data-src="holder.js/250x250/auto" alt="250x250" style="width: 250px; height: 250px;" src="{% static 'blog/professionaldevelopment.png' %}" data-holder-rendered="true"></p>
-          <p class="lead"><a class="btn btn-primary btn-lg" href="#" role="button">Guidelines</a></p>
+          <p class="lead"><a class="btn btn-primary btn-lg" href="{% url 'framework-professional' %}" role="button">Guidelines</a></p>
         </div>
     </div>
 {%  endblock content %}
