--- a/templates/blog/base.html
+++ b/templates/blog/base.html
@@ -21,7 +21,7 @@
     <header class="site-header">
       <nav class="navbar navbar-expand-md navbar-dark bg-primary fixed-top">
         <div class="container">
-          <a class="navbar-brand mr-4" href="{% url 'blog-home' %}">BL Framework</a>
+          <a class="navbar-brand mr-4" href="{% url 'framework-home' %}">BL Framework</a>
           <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarToggle" aria-controls="navbarToggle" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
           </button>
@@ -39,7 +39,7 @@
                     </div>
                 </li>
                 <a class="nav-item nav-link" href="{% url 'resource-home' %}">Resources</a>
-                <a class="nav-item nav-link" href="#">Lessons</a>
+                <a class="nav-item nav-link" href="{% url 'lessons-home' %}">Lessons</a>
             </div>
             <!-- Navbar Right Side -->
             <div class="navbar-nav">
